--- a/Students.html
+++ b/Students.html
@@ -13,7 +13,7 @@
 <body>
   <!-- Fixed Header -->
   <header class="header">
-    <a href="#" class="logo">المنصة</a>
+    <a href="#" class="logo">WebFine</a>
 
 
     <nav class="navbar">
@@ -23,7 +23,6 @@
     </nav>
   </header>
   
-
   <!-- Student Dashboard -->
   <section class="dashboard-page">
     <h1 class="heading">الدورات</h1>
