--- a/Teachers.html
+++ b/Teachers.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+<<!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>لوحة المعلم</title>
+  <title>لوحة الطالب</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -13,14 +13,16 @@
 <body>
   <!-- Fixed Header -->
   <header class="header">
-    <a href="#" class="logo">المنصة</a>
+    <a href="#" class="logo">WebFine</a>
+
+
     <nav class="navbar">
       <a href="index.html">الصفحة الرئيسية</a>
       <a href="index.html#opinions">آراء الطلبة</a>
       <a href="index.html#login" class="btn">تسجيل الخروج</a>
     </nav>
   </header>
-
+  
   
   
 
