--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
+مريم عزام, [2/18/2025 11:24 PM]
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>المنصة التعليمية</title>
+  <title>منصة التعليمية</title>
   <link rel="stylesheet" href="styles.css">
   <!-- Font Awesome for Icons -->
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
@@ -11,15 +12,16 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Naskh+Arabic:wght@400..700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Scheherazade+New:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
   <!-- Fixed Header -->
   <header class="header">
-    <a href="#" class="logo">المنصة</a>
+    <a href="#" class="logo">WebFine</a>
 
-    <i class='bx bx-menu' id="menu-icon"></i>
+    <input type="checkbox" id="menu-toggle" class="menu-toggle">
+    <label for="menu-toggle" class="menu-icon">☰</label>
 
     <nav class="navbar">
       <a href="index.html">الصفحة الرئيسية</a>
@@ -105,7 +107,8 @@
         <p>"أوصي جميع الطلاب باستخدام هذه المنصة."</p>
       </div>
 
-      <div class="comment">
+
+<div class="comment">
         <form  class="form2">
           <div class="input-box">
             <textarea  class="comment-text" rows="3" placeholder="تعليق" ></textarea>
